<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android style and themes</string>
    <string name="hello_world">Theme.AppCompat.Light.DarkActionBar</string>
    <string name="action_settings">Settings</string>
    <string name="empty">empty</string>
    <string name="title_activity_set_theme">Set the theme!</string>
    <string name="label_set_white_theme">Set white theme</string>
    <string name="label_set_blue_theme">Set blue theme</string>
    <string name="label_set_red_theme">Set red theme</string>

</resources>